# song-organizer

./: .env.example  .gitignore  LGPL-2.1.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.txt  build.ps1  chromaprint.json  config.example.yaml  main.py  pyproject.toml  song_organizer.spec
cli/: __init__.py  __main__.py  app.py  config.py  output.py  parser.py
cli/commands/: __init__.py  audit.py  auto_detect.py  dedup.py  rename.py  shared.py  tags.py  undo.py
gui/: __init__.py  __main__.py  app.py
renamer/: __init__.py  acoustid.py  apply.py  extractor.py  fingerprint.py  formatter.py  identity.py  media.py  musicbrainz.py  ocremix_dedup.py  recycle_bin.py  regular_dedup.py  regular_parser.py  review_api.py  review_models.py  runtime.py  strategy.py  tag_audit.py  tag_writer.py  universal_dedup.py
tests/: test_acoustid.py  test_apply.py  test_cli_app.py  test_cli_commands.py  test_cli_config.py  test_cli_parser.py  test_extractor.py  test_fingerprint.py  test_formatter_safety.py  test_gui_history.py  test_gui_integration.py  test_gui_selection.py  test_recycle_bin.py  test_regular_dedup.py  test_regular_parser.py  test_review_api.py  test_runtime.py  test_strategy.py  test_tag_audit.py
