[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "song-organizer"
version = "0.1.0"
description = "Review-first music library organizer"
requires-python = ">=3.11"
dependencies = [
    "mutagen>=1.47.0",
    "musicbrainzngs>=0.7.1",
    "pyacoustid>=1.3.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]
build = ["pyinstaller>=6.0.0"]

[project.scripts]
ballad = "cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["cli*", "renamer*", "gui*"]
